...
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Income"
                    android:textColor="@color/success_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTotalIncome"
                    android:layout_width="wrap_content"
...
